--- a/index.html
+++ b/index.html
@@ -9,31 +9,32 @@
 <body>
     <div class="cal">
         <h1>Space calculator</h1>
-        <div class="screen"></div>
+        <input id="screen" readonly>
         <div class="button">
-            <div class="input">7</div>
-            <div class="input">8</div>
-            <div class="input">9</div>
-            <div class="input">C</div>
-            <div class="input">%</div>
+            <button class="input" onclick="goDisplay('7')">7</button>
+            <button class="input" onclick="goDisplay('8')">8</button>
+            <button class="input" onclick="goDisplay('9')">9</button>
+            <button class="input" onclick="clearDisplay()">C</button>
+            <button class="input" onclick="goDisplay('%')">%</button>
 
-            <div class="input">4</div>
-            <div class="input">5</div>
-            <div class="input">6</div>
-            <div class="input">del</div>
-            <div class="input">+</div>
+            <button class="input" onclick="goDisplay('4')">4</button>
+            <button class="input" onclick="goDisplay('5')">5</button>
+            <button class="input" onclick="goDisplay('6')">6</button>
+            <button class="input" onclick="goDisplay('**')">**</button>
+            <button class="input" onclick="goDisplay('+')">+</button>
 
-            <div class="input">1</div>
-            <div class="input">2</div>
-            <div class="input">3</div>
-            <div class="input">X</div>
-            <div class="input">-</div>
+            <button class="input" onclick="goDisplay('1')">1</button>
+            <button class="input" onclick="goDisplay('2')">2</button>
+            <button class="input" onclick="goDisplay('3')">3</button>
+            <button class="input" onclick="goDisplay('*')">*</button>
+            <button class="input" onclick="goDisplay('-')">-</button>
 
-            <div class="input">0</div>
-            <div class="input">.</div>
-            <div class="input">&divide</div>
-            <div class="input">=</div>
+            <button class="input" onclick="goDisplay('0')">0</button>
+            <button class="input" onclick="goDisplay('.')">.</button>
+            <button class="input" onclick="goDisplay('/')">/</button>
+            <button class="input" onclick="calculate()">=</button>
         </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
